fix(frontend): adjust side nav colors and spacing

--- a/packages/frontend/src/components/layout/side-nav/item/styles.module.css
+++ b/packages/frontend/src/components/layout/side-nav/item/styles.module.css
@@ -4,24 +4,41 @@
     @apply w-full flex flex-col items-center gap-2 text-center;
 }
 
-.root:hover {
-    @apply [&>.iconWrapper]:bg-zinc-200 dark:[&>.iconWrapper]:bg-zinc-700;
+.root:hover:not(.disabled) {
+    @apply [&>.iconWrapper]:bg-white
+        dark:[&>.iconWrapper]:bg-zinc-700
+        [&>.label]:text-black
+        dark:[&>.label]:text-white
+        [&>.iconWrapper>.icon]:text-black
+        dark:[&>.iconWrapper>.icon]:text-white;
 }
 
 .iconWrapper {
-    @apply relative flex items-center justify-center w-11 h-11 rounded-lg theme-surface theme-surface-hover transition-colors duration-200 ease-in-out;
+    @apply relative flex items-center justify-center w-11 h-11 rounded-lg dark:bg-dark-surface bg-zinc-200 transition-colors duration-200 ease-in-out;
 }
 
 .iconWrapper.active {
-    @apply theme-surface-active;
+    @apply dark:bg-zinc-700 bg-white;
 }
 
-.iconWrapper.disabled {
-    @apply cursor-not-allowed hover:bg-transparent;
+.disabled {
+    @apply cursor-not-allowed;
 }
 
 .icon {
-    @apply w-5 h-5 text-black dark:text-zinc-200;
+    @apply w-5 h-5 text-black dark:text-white transition-colors duration-200 ease-in-out;
+}
+
+.icon:not(.active) {
+    @apply text-zinc-500 dark:text-[#9CA3AF];
+}
+
+.label {
+    @apply transition-colors duration-200 ease-in-out dark:text-white;
+}
+
+.label:not(.active) {
+    @apply text-zinc-500 dark:text-[#9CA3AF];
 }
 
 .popover {
